--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+div{
+	background-color: lightblue;
+	width: 300px;
+	padding: 50px;
+	border: 15px solid blue;
+	margin: 20px;
+}
+
+
+
+
